force-app/main/default/objects/Course__c/fields/Attendees_Quota__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Quota__c</fullName>
    <description>Maximum number of students that can participate in a course</description>
    <label>Attendees Quota</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>