force-app/main/default/objects/Course__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <description>The amount of credits that will be given to a student upon completion of the
course. The amount allowed is between 1-100</description>
    <inlineHelpText>Number between 1-100</inlineHelpText>
    <label>Credit</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>