force-app/main/default/objects/Course__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if the course has been started (when the start date is reached)</inlineHelpText>
    <label>Started</label>
    <type>Checkbox</type>
</CustomField>