force-app/main/default/objects/Course__c/fields/Text_ID__c.field-meta.xml
<CustomField>
    <fullName>Text_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text ID</label>
    <type>Text</type>
</CustomField>