force-app/main/default/objects/Course__c/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Tutor who will be leading the course. The records available for
the selection here should only be Person of type Tutor</description>
    <label>Tutor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Person__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tutor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>