force-app/main/default/objects/Course__c/validationRules/Attendees_Should_Not_Exceed_The_Quota.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendees_Should_Not_Exceed_The_Quota</fullName>
    <active>true</active>
    <errorConditionFormula>Attendees_Count__c &gt;  Attendees_Quota__c</errorConditionFormula>
    <errorMessage>Attendees Count should not be greater than the Attendees Quota</errorMessage>
</ValidationRule>