force-app/main/default/objects/Course__c/validationRules/Credit_Amount_Between_1_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Amount_Between_1_and_100</fullName>
    <active>true</active>
    <errorConditionFormula>Credit__c  &lt; 1   ||   Credit__c &gt; 100</errorConditionFormula>
    <errorMessage>Course Credit amount should be a number between 1 and 100 (inclusive)</errorMessage>
</ValidationRule>