force-app/main/default/objects/Course__c/validationRules/Prevent_Comleted_Checkbox_From_Uncheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Comleted_Checkbox_From_Uncheck</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Completed__c )  &amp;&amp;   PRIORVALUE( Completed__c )  = TRUE</errorConditionFormula>
    <errorMessage>You are not able to uncheck the Completed checkbox</errorMessage>
</ValidationRule>