force-app/main/default/objects/Course__c/validationRules/Prevent_Credit_From_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Credit_From_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Credit__c )</errorConditionFormula>
    <errorMessage>You are not able to edit the Credit field</errorMessage>
</ValidationRule>