force-app/main/default/objects/Course__c/validationRules/Start_Date_cannot_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_cannot_be_in_the_past</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Start Date cannot be a date in the past</errorMessage>
</ValidationRule>