force-app/main/default/objects/Course__c/validationRules/The_Start_Date_Should_Be_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>The_Start_Date_Should_Be_Before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;=  End_Date__c</errorConditionFormula>
    <errorMessage>The Start Date must be before the End Date</errorMessage>
</ValidationRule>