force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Tutor__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Attendees_Count__c</columns>
    <columns>Attendees_Quota__c</columns>
    <columns>Available_Seats__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>