force-app/main/default/objects/Course__c/listViews/Past_Courses.listView-meta.xml
<ListView>
    <fullName>Past_Courses</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Tutor__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Attendees_Count__c</columns>
    <columns>Attendees_Quota__c</columns>
    <columns>Available_Seats__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Completed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Past Courses</label>
</ListView>