force-app/main/default/objects/Course__c/listViews/Pending_Courses.listView-meta.xml
<ListView>
    <fullName>Pending_Courses</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Tutor__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Credit__c</columns>
    <columns>Attendees_Count__c</columns>
    <columns>Attendees_Quota__c</columns>
    <columns>Available_Seats__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Started__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Pending Courses</label>
</ListView>